@@ -89,7 +89,7 @@ double	minweight = 4e-3;		/* minimum ray weight */
 char  *ambfile = NULL;			/* ambient file name */
 COLOR  ambval = BLKCOLOR;		/* ambient value */
 int  ambvwt = 0;			/* initial weight for ambient value */
-double	ambacc = 0.15;			/* ambient accuracy */
+double	ambacc = 0.2;			/* ambient accuracy */
 int  ambres = 64;			/* ambient resolution */
 int  ambdiv = 512;			/* ambient divisions */
 int  ambssamp = 128;			/* ambient super-samples */
